# aiohttp-asyncmdnsresolver

./: .codecov.yml  .gitignore  .mypy.ini  .pre-commit-config.yaml  CHANGES.rst  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-merge.yml  ci-cd.yml  codeql.yml
CHANGES/: 100.doc.rst  101.contrib.rst  102.doc.rst  19.misc.rst  21.bugfix.rst  23.feature.rst  27.misc.rst  36.packaging.rst  62.breaking.rst  65.bugfix.rst  67.doc.rst  68.packaging.rst  69.bugfix.rst  71.contrib.rst  72.contrib.rst  73.contrib.rst  74.bugfix.rst  75.misc.rst  76.contrib.rst  78.contrib.rst  80.doc.rst  81.packaging.rst  84.doc.rst  85.doc.rst  86.doc.rst  87.bugfix.rst  89.doc.rst  90.feature.rst  92.doc.rst  93.contrib.rst  94.contrib.rst  95.contrib.rst  96.contrib.rst  97.contrib.rst  98.feature.rst
docs/: api.rst  conf.py  index.rst
docs/contributing/: release_guide.rst
examples/: dual.py  run.py
requirements/: test.txt
src/aiohttp_asyncmdnsresolver/: __init__.py  _impl.py  api.py
tests/: conftest.py  test_api.py  test_impl.py  test_local_name_routing.py  test_mdns_timeout_conversion.py  test_resolve_result_fields.py
