[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiohttp-asyncmdnsresolver"
dependencies = ["aiodns>=3.2.0", "aiohttp>=3.10.0", "zeroconf>=0.142.0"]
description = "An async resolver for aiohttp that supports MDNS"
dynamic = ["version"]
license = "Apache-2.0"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Development Status :: 5 - Production/Stable",
    "Typing :: Typed"
]

[project.urls]
Homepage = "https://github.com/aio-libs/aiohttp-asyncmdnsresolver"
Issues = "https://github.com/aio-libs/aiohttp-asyncmdnsresolver/issues"

[tool.setuptools]
packages = ["aiohttp_asyncmdnsresolver"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
aiohttp_asyncmdnsresolver = ["py.typed"]

[tool.setuptools.dynamic]
version = {attr = "aiohttp_asyncmdnsresolver.__version__"}

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "I",  # isort formatting.
    "UP",  # pyupgrade.
]
